--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -42,7 +42,7 @@
   padding: 3px;
   background-color: var(--lgreen);
   height: auto;
-  object-fit: cover;
+  object-fit: fill;
   transition: background-color 0.3s ease-in-out;
 }
 
