--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -56,7 +56,8 @@
   color: var(--lblue);
 }
 
-.about span {
+.about span,
+.projects span {
   color: var(--lgreen);
 }
 
@@ -70,6 +71,7 @@
 }
 
 .about:hover .arrow,
+.projects:hover .arrow,
 .logo:hover .arrow {
   transform: rotate(90deg);
   color: var(--lblue);
@@ -81,5 +83,9 @@
     padding: 1rem;
     font-size: 1rem;
     letter-spacing: 0.05rem;
+  }
+
+  .arrow {
+    display: none;
   }
 }
