--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -43,12 +43,22 @@
   border-radius: 30px;
 }
 
+.project-link {
+  display: inline;
+}
+
 .project-link:hover {
   color: var(--lblue);
 }
 
 .project-title {
+  display: inline;
   font-size: large;
+  color: var(--lgreen);
+}
+
+.project-title:hover {
+  color: var(--lblue);
 }
 
 .project-text {
@@ -64,6 +74,51 @@
 
 .project-description {
   text-align: left;
+  display: block;
+  padding: 10px 10px 10px 10px;
+  border-radius: 20px;
+}
+
+.project-arrow {
+  display: inline-block;
+  transition: transform 0.3s ease;
+  padding-right: 5px;
+}
+
+.project-title:hover .project-arrow {
+  transform: rotate(90deg);
+  color: var(--lblue);
+}
+
+.video-link {
+  display: inline-block;
+  color: var(--lgreen);
+}
+
+.video-link:hover {
+  color: var(--lblue);
+}
+
+.video-link:hover .project-arrow {
+  transform: rotate(90deg);
+}
+
+.tech-list {
+  display: flex;
+}
+
+.tech-item {
+  background-color: var(--lgreen);
+  color: var(--dblack);
+  padding: 2px 6px 2px 6px;
+  margin-right: 5px;
+  margin-top: 10px;
+  border-radius: 10px;
+  user-select: none;
+}
+
+.tech-item:hover {
+  background-color: var(--lblue);
 }
 
 @keyframes fadeInUp {
@@ -94,147 +149,3 @@
     display: none;
   }
 }
-
-/* .project-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  animation: fadeInUp 0.6s ease-out forwards;
-  flex-direction: row;
-  margin-bottom: 60px;
-  margin-top: 30px;
-  width: 100%;
-}
-
-.project-img {
-  border-radius: 6px;
-  padding: 3px;
-  background-color: var(--lgreen);
-  height: auto;
-  object-fit: fill;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.project-card {
-  display: flex;
-  flex-direction: row;
-  background-color: var(--lblack);
-  border-radius: 8px;
-  width: max-content;
-  padding: 10px 20px 10px 20px;
-  margin: 20px;
-  color: var(--white);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease;
-}
-
-.project-card:hover {
-  transform: translateY(-5px);
-}
-
-.project-inner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 15px;
-}
-
-.description-container {
-  width: 65vw;
-  padding-left: 20px;
-}
-
-.project-title {
-  text-align: center;
-  font-size: 1.6rem;
-  background-color: var(--dblack);
-  padding: 6px;
-  border-radius: 6px;
-  box-shadow: var(--dblack) 2px 2px 2px 2px;
-}
-
-.project-link {
-  text-decoration: none;
-  color: var(--lgreen);
-  font-weight: bold;
-  display: block;
-  margin-top: 15px;
-}
-
-.project-link .project-link:hover {
-  color: var(--lblue);
-  text-decoration: none;
-}
-
-.project-link:hover {
-  color: var(--lblue);
-}
-
-.project-arrow {
-  display: inline-block;
-  transition: transform 0.3s ease;
-  padding-right: 5px;
-}
-
-.project-link:hover .project-arrow {
-  transform: rotate(90deg);
-  color: var(--lblue);
-}
-
-.project-link:hover .project-img {
-  background-color: var(--lblue);
-}
-
-.project-description {
-  display: flex;
-  flex-direction: column;
-  flex-flow: column-reverse wrap;
-  align-items: center;
-  height: 69%;
-  padding: 10px 30px 10px 30px;
-  border-radius: 6px;
-  box-shadow: var(--dblack) 2px 2px 2px 2px;
-  justify-content: center;
-  background-color: var(--dblack);
-  color: var(--grey);
-  font-size: 1.05rem;
-  line-height: 1.4rem;
-  margin-top: 5px;
-  text-align: left;
-}
-
-.video-link {
-  color: var(--lgreen);
-  padding-bottom: 10px;
-  transition: color 0.3s ease;
-}
-
-.video-link:hover {
-  color: var(--lblue);
-}
-
-.video-link:hover .project-arrow {
-  transform: rotate(90deg);
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@media screen and (max-width: 720px) {
-  .project-card {
-    flex-direction: column;
-  }
-
-  .project-description {
-    height: auto;
-    margin: 0;
-  }
-} */
