--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -12,7 +12,7 @@ html {
   font-family: var(--scp);
 }
 
-.main-container {
+#main-container {
   padding: 0px 10vw 0px 10vw;
   margin-top: 120px;
 }
@@ -91,10 +91,36 @@ html {
   margin-right: 5px;
 }
 
+#about-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.about-box {
+  max-width: 75vw;
+}
+
+.about-box h1 {
+  font-size: 1.7rem;
+  color: var(--lgreen);
+}
+
+.about-box p {
+  margin-top: 20px;
+}
+
 @media screen and (max-width: 1006px) {
   .dev-box {
     flex-direction: column;
     text-align: center;
+  }
+  .dev-info {
+    font-size: 4rem;
+    display: block;
+    /* flex-direction: column; */
+    /* max-width: 50vw; */
   }
   .dev-image {
     width: 40vw;
