--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -12,7 +12,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -82,6 +82,7 @@
     padding: 1rem;
     font-size: 1rem;
     letter-spacing: 0.05rem;
+    justify-content: space-between;
   }
 
   .arrow {
