--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -69,7 +69,7 @@ html {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .social-link {
@@ -91,24 +91,54 @@ html {
   margin-right: 5px;
 }
 
-#about-container {
+#subject-container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
-.about-box {
-  max-width: 75vw;
+.subject-box {
+  width: 40vw;
+  margin: 0px 20px 0px 20px;
 }
 
-.about-box h1 {
+.subject-title {
   font-size: 1.7rem;
   color: var(--lgreen);
 }
 
-.about-box p {
+#experience {
   margin-top: 20px;
+}
+
+.subject-box p {
+  margin-top: 20px;
+}
+
+.edu-title {
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: var(--lgreen);
+}
+
+.edu-subtitle {
+  font-style: italic;
+  font-weight: lighter;
+}
+
+.edu-description {
+  font-size: 0.9rem;
+}
+
+.edu-description li::before {
+  content: "▶";
+  display: inline-block;
+  width: 1em;
+  margin-right: 0.5em;
+  color: var(--lgreen);
 }
 
 @media screen and (max-width: 1006px) {
