--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -87,7 +87,7 @@ html {
 }
 
 .social-icon {
-  margin-right: 5px;
+  margin-left: 5px;
 }
 
 #subject-container {
@@ -205,6 +205,7 @@ html {
   }
   .social-link {
     justify-content: space-between;
+    margin-top: 5px;
     width: 40vw;
   }
 }
