--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -77,6 +77,10 @@
   color: var(--lblue);
 }
 
+.mobile-links {
+  display: none;
+}
+
 @media only screen and (max-width: 768px) {
   .header {
     padding: 1rem;
@@ -85,7 +89,15 @@
     justify-content: space-between;
   }
 
-  .arrow {
+  .header-links {
     display: none;
   }
+
+  .mobile-links {
+    display: block;
+  }
+
+  /* .arrow {
+    display: none;
+  } */
 }
